# semantic-rag

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  fetch_docs.py  ingest_docs.py  main.py  pyproject.toml  study-book.md
data/: chroma.sqlite3
docs/implementation/: overview.md  step-1.1-fetch-docs.md  step-1.2-ingest-service.md  step-1.3-search-service.md  step-1.4-generation-service.md  step-1.5-fastapi-wiring.md  step-1.6-streamlit-ui.md  step-2-hybrid-search.md  step-3-evaluation.md  step-4-observability.md  step-5-polish.md
notebooks/: exploration.ipynb
src/: __init__.py  main.py
src/db/: __init__.py  chromadb.py
src/services/: ingest.py  scraper.py  search.py
