[project]
name = "semantic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi[standard]>=0.128.0",
    "hypercorn>=0.18.0",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.21",
]

[project.scripts]
dev = "fastapi dev main:app"
start = "fastapi run main:app"
